# da-boot

./: Cargo.toml  README.md
crates/da-alternatives/: Cargo.toml
crates/da-alternatives/src/: lib.rs
crates/da-analyzer/: Cargo.toml
crates/da-analyzer/src/: cpu_mode.rs  disasm.rs  err.rs  fn_analysis.rs  lib.rs  main.rs  reg_analysis.rs
crates/da-boot/: Cargo.toml  README.md
crates/da-boot-macros/: Cargo.toml  README.md
crates/da-boot-macros/src/: lib.rs  patch_enum.rs  protocol.rs  structs.rs
crates/da-boot/src/: commands.rs  err.rs  file_ext.rs  logging.rs  main.rs  repl.rs  rpc.rs
crates/da-boot/src/boot/: bootrom.rs  da.rs  lk_arg.rs  mod.rs  preloader.rs  rpc.rs
crates/da-boot/src/boot/rpc/: ext.rs  mod.rs  selector.rs
crates/da-boot/src/commands/: custom_brom.rs  custom_preloader.rs  da.rs  generic.rs  mod.rs  preloader.rs
crates/da-boot/src/exploit/: croissant.rs  croissant2.rs  mod.rs  pumpkin.rs
crates/da-cli-ext/: Cargo.toml
crates/da-cli-ext/src/: lib.rs
crates/da-params/: Cargo.toml
crates/da-params/src/: err.rs  lib.rs
crates/da-parser/: Cargo.toml  README.md
crates/da-parser/src/: dump.rs  err.rs  lib.rs  main.rs  structs.rs
crates/da-parser/src/da/: err.rs  hl.rs  ll.rs  mod.rs
crates/da-parser/src/lk/: err.rs  hl.rs  ll.rs
crates/da-patcher/: Cargo.toml  README.md
crates/da-patcher/src/: err.rs  gui.rs  lib.rs  main.rs
crates/da-patcher/src/da/: hash.rs  mod.rs  uart_port.rs
crates/da-patcher/src/lk/: get_part.rs  mod.rs  mt_part_generic_read.rs  mt_part_get_partition.rs
crates/da-patcher/src/preloader/: bldr_jump.rs  da_argument.rs  daa.rs  hw_check_battery.rs  jump_da.rs  lk_argument.rs  lk_base.rs  mod.rs  sec_region_check.rs  send_da.rs  usb_ptr.rs
crates/da-patcher/src/slice/: fuzzy.rs  mod.rs
crates/da-port/: Cargo.toml
crates/da-port/src/: err.rs  lib.rs
crates/da-protocol/: Cargo.toml  README.md
crates/da-protocol/src/: err.rs  lib.rs
crates/da-soc/: Cargo.toml
crates/da-soc/src/: lib.rs
payloads/brom/: Cargo.toml  README.md  build.sh  payload.ld
payloads/brom/src/: main.rs  start.S
payloads/bump/: README.md
payloads/bump/src/: lib.rs
payloads/da1/: Cargo.toml  README.md  armv7a-none-eabi.json  build.sh  payload.ld
payloads/da1/.cargo/: config.toml
payloads/da1/src/: main.rs
payloads/interceptor/: Cargo.toml  README.md
payloads/interceptor/src/: code.rs  err.rs  lib.rs  reader.rs  thumb2reader.rs  thumb2writer.rs  writer.rs
payloads/preloader/: Cargo.toml  README.md  armv7a-none-eabi.json  build.sh
payloads/preloader/.cargo/: config.toml
payloads/preloader/src/: main.rs  start.S
payloads/rpc/: Cargo.toml  README.md  armv7a-none-eabi.json  build.sh  payload.ld
payloads/rpc/.cargo/: config.toml
payloads/rpc/src/: brom.rs  err.rs  exception.rs  heap.rs  hooks.rs  macros.rs  main.rs  pl.rs  setup.rs  start.S  uart.rs  usb.rs
payloads/shared/: Cargo.toml  README.md
payloads/shared/src/: lib.rs
