[workspace]
resolver = "3"
members = ["crates/da-boot", "crates/da-boot-macros", "crates/da-cli-ext", "crates/da-params", "crates/da-patcher", "crates/da-protocol", "payloads/bump", "payloads/interceptor", "payloads/rpc", "payloads/shared"]

[workspace.dependencies]
derive_more = { version = "2.1.1", features = ["is_variant", "unwrap"] }
thiserror = "2.0.18"
derive-ctor = "1.0.6"
clap = { version = "4.6.1", features = ["derive"] }
clap-num = "1.2.0"
serialport = "4.9.0"
simpleport = { git = "https://github.com/rva3/simpleport" }
ufmt = "0.2.0"
kaiko = { git = "https://github.com/rva3/kaiko", version = "0.1.0", features = ["no_tracers"] }
hacc = { git = "https://github.com/rva3/hacc", version = "0.1.0" }
acon = { git = "https://github.com/rva3/acon/", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.nostd]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
