[package]
name = "da-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
memchr = "2.8.0"
yaxpeax-arch = "0.3.2"
thiserror = { workspace = true }
derive-ctor = { workspace = true }
clap = { workspace = true }
yaxpeax-arm = { git = "https://github.com/mt6572-mainline/yaxpeax-arm", branch = "da-boot", version = "0.4.0" }
