[package]
name = "da-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
clap-num = { workspace = true }
colored = "3.0.0"
serialport = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
derive-ctor = { workspace = true }
da-boot-macros = { path = "../da-boot-macros" }
da-parser = { path = "../da-parser" }
da-patcher = { path = "../da-patcher" }
da-protocol = { path = "../da-protocol" }
shared = { path = "../../payloads/shared" }
sha-1 = "0.10.1"
