[package]
name = "da-boot"
version = "0.1.0"
edition = "2024"

[features]
static = []

[dependencies]
clap = { workspace = true }
clap-num = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
derive-ctor = { workspace = true }
da-boot-macros = { path = "../da-boot-macros" }
simpleport = { workspace = true, features = ["std"] }
da-protocol = { path = "../da-protocol", features = ["std"] }
da-soc = { path = "../da-soc" }
rustyline = "18.0.0"
kaiko = { workspace = true }
memchr = "2.8.1"
da-params = { version = "0.1.0", path = "../da-params" }
da-patcher = { version = "0.1.0", path = "../da-patcher" }
anyhow = { version = "1.0.102", features = ["backtrace"] }
which = "8.0.2"
tempfile = "3.27.0"
hacc = { git = "https://github.com/shomykohai/hacc", version = "0.1.0" }
