[package]
name = "da-parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
bincode = { workspace = true }
thiserror = { workspace = true }
derive-ctor = { workspace = true }
clap = { workspace = true }
clap-num = { workspace = true }
itertools = "0.14.0"
getset = "0.1.6"
