[package]
name = "da-patcher"
version = "0.1.0"
edition = "2024"
default-run = "da-patcher"

[[bin]]
name = "da-patcher"
path = "src/main.rs"

[[bin]]
name = "da-patcher-gui"
path = "src/gui.rs"
required-features = ["gui"]

[features]
gui = ["dep:eframe", "dep:egui_file"]

[dependencies]
thiserror = { workspace = true }
derive-ctor = { workspace = true }
derive_more = { workspace = true}
clap = { workspace = true }
hexpatch-keystone = "0.9.4"
capstone = "0.13.0"
regex = "1.12.2"
eframe = { version = "0.33.0", optional = true}
egui_file = { version = "0.24.0", optional = true }
enum_dispatch = { workspace = true }
da-boot-macros = { path = "../da-boot-macros" }
