[package]
name = "da-patcher"
version = "0.1.0"
edition = "2024"
default-run = "da-patcher"

[dependencies]
thiserror = { workspace = true }
derive-ctor = { workspace = true }
derive_more = { workspace = true}
clap = { workspace = true }
clap-num = { workspace = true }
hexpatch-keystone = "0.9.4"
da-boot-macros = { path = "../da-boot-macros" }
da-analyzer = { path = "../da-analyzer" }
