[package]
name = "da-protocol"
version = "0.1.0"
edition = "2024"

[features]
std = ["simpleport/std"]

[dependencies]
postcard = "1.1.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
simpleport = { workspace = true }
thiserror = { version = "2.0.18", default-features = false }
derive-ctor = { workspace = true }
derive_more = { version = "2.1.1", default-features = false, features = ["is_variant"] }
da-params = { version = "0.1.0", path = "../da-params" }
ufmt = { workspace = true }
