[package]
name = "preloader"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.1", features = ["ufmt"] }
shared = { path = "../shared" }
interceptor = { path = "../interceptor" }
bump = { path = "../bump" }
ufmt = "0.2.0"
da-port = { path = "../../crates/da-port" }
da-protocol = { path = "../../crates/da-protocol", features = ["preloader"] }
derive-ctor = { workspace = true }
