[package]
name = "preloader"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.1", features = ["ufmt"] }
shared = { path = "../shared" }
interceptor = { path = "../interceptor", features = ["alloc"] }
bump = { path = "../bump" }
ufmt = "0.2.0"
simpleport = { workspace = true }
da-protocol = { path = "../../crates/da-protocol", features = ["preloader"] }
derive-ctor = { workspace = true }
