[package]
name = "rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.1", features = ["ufmt"] }
shared = { path = "../shared", features = ["ufmt"] }
interceptor = { path = "../interceptor", features = ["alloc"] }
bump = { path = "../bump" }
simpleport = { workspace = true }
da-protocol = { path = "../../crates/da-protocol" }
derive-ctor = { workspace = true }
ufmt = { workspace = true }
